[package]
name = "rustserve-users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustserve = { path = "../../" }
http = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2.0"

[dev-dependencies]
futures = { version = "0.3.21", default-features = false, features = ["executor"] }
